--- a/text_preprocessing.ipynb
+++ b/text_preprocessing.ipynb
@@ -1,14 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "1b7ddf6b",
+   "cell_type": "markdown",
+   "id": "b55da269",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "[](https://imgur.com/7KH8RLQ)\n",
+    "\n",
+    "# Preprocessing des donnees textuelle\n",
+    "Ici je vous présente toutes les étapes nécessaires pour traiter les données textuelles. \n",
+    "\n",
+    "**Rentrons dans le contexte du tutoriel:**\n",
+    "\n",
+    "Nous avons une base de données nommée **spam.csv** qui regroupe des données sur des SMS qui sont catégorisés entre Spam et Ham. \n",
+    "Le but est de traiter ces données."
    ]
   },
   {
@@ -16,12 +21,13 @@
    "id": "74a0b9ef",
    "metadata": {},
    "source": [
-    "# Load the dataset"
+    "# Charger les données\n",
+    "Avant de charger la base de données vous devez changer les paramètres de pour pandas pour voir les message en complet puis vous charger les données."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fd310526",
    "metadata": {
     "scrolled": false
@@ -38,7 +44,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MOHAM\\AppData\\Local\\Temp/ipykernel_3524/2849557780.py:3: FutureWarning: Passing a negative integer is deprecated in version 1.0 and will not be supported in future version. Instead, use None to not limit the column width.\n",
+      "C:\\Users\\MOHAM\\AppData\\Local\\Temp\\ipykernel_14132\\3908958675.py:5: FutureWarning: Passing a negative integer is deprecated in version 1.0 and will not be supported in future version. Instead, use None to not limit the column width.\n",
       "  pd.set_option(\"display.max_colwidth\", -1)\n"
      ]
     },
@@ -148,16 +154,18 @@
        "9  Had your mobile 11 months or more? U R entitled to Update to the latest colour mobiles with camera for Free! Call The Mobile Update Co FREE on 08002986030        "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#load dataset\n",
-    "#Pour afficher suffisament de textes dans les differents messages on va preciser le width de chaque colonnes\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "#Pour afficher suffisament de textes dans les differents messages vous devez donner le width maximal pour les colonnes.\n",
     "pd.set_option(\"display.max_colwidth\", -1)\n",
-    "# pour les textes non encoder, il faut les encoder en \"ISO-8859-1\" et non \"utf-8\"\n",
+    "# Vous chargez les donnees mais les textes ne sont pas encode donc vous devez les encodes en \"ISO-8859-1\" et non \"utf-8\"\n",
     "df = pd.read_csv(\"spam/spam.csv\", encoding=\"ISO-8859-1\")\n",
     "df = df[[\"v1\", \"v2\"]]\n",
     "print(\"Le shape du dataframe: \", df.shape)\n",
@@ -169,12 +177,22 @@
    "id": "8f5ef4fa",
    "metadata": {},
    "source": [
-    "# Clean the dataset"
+    "# Clean the dataset\n",
+    "Ici vous devez nettoyer l'ensemble des messages en transformant les messages et supprimant les caractères inutiles pour les modèles (Les ponctuations, mettre les phrases en minuscule, Tokenizer les caractères, retirer les mots d'arrêt, les liens, les hypers caractères et normaliser les données)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45a7426e",
+   "metadata": {},
+   "source": [
+    "### Suppression des ponctuation\n",
+    "Pour supprimer les ponctuation nous utilisons la librairie **String**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b8d6b749",
    "metadata": {
     "scrolled": false
@@ -309,16 +327,15 @@
        "9  Had your mobile 11 months or more U R entitled to Update to the latest colour mobiles with camera for Free Call The Mobile Update Co FREE on 08002986030    "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Suppression des ponctuations dans le dataframe avec la librarie \"string\"\n",
     "import string\n",
     "\n",
-    "#Une fonction permettant de nettoyer les textes\n",
+    "#Developpez une fonction qui parcoureras la base de donnees pour retirer les ponctuations \n",
     "def remove_punctuation(text):\n",
     "    remove_ = \"\".join([i for i in text if i not in string.punctuation])\n",
     "    return remove_\n",
@@ -328,8 +345,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63bf0bdb",
+   "metadata": {},
+   "source": [
+    "### Mettre en minuscule l'ensemble des messages"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "356674e6",
    "metadata": {},
    "outputs": [
@@ -485,20 +510,29 @@
        "9  had your mobile 11 months or more u r entitled to update to the latest colour mobiles with camera for free call the mobile update co free on 08002986030    "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Lower case text\n",
+    "#Ce sript va parcourir l'ensembles de la base de donnees pour mettre tous les messages en minuscule\n",
     "df[\"to_lowercase\"] = df[\"no_punctuation\"].apply(lambda x: x.lower())\n",
     "df.head(10)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff6c5688",
+   "metadata": {},
+   "source": [
+    "### La tokenization\n",
+    "Dans cette étape vous allez tokenizer chaque mot de chacune des phrases, ce qui permettra à chaque mot d'avoir un ID pour les identifier et ainsi aider le modèle a reconnaitre les mots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2850156f",
    "metadata": {},
    "outputs": [
@@ -677,13 +711,13 @@
        "9  [had your mobile 11 months or more u r entitled to update to the latest colour mobiles , ith camera for free call the mobile update co free on 08002986030]    "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Tokensization des differents mots dans le texte\n",
+    "#Tokensization des differents mots de chaque messages\n",
     "import re\n",
     "\n",
     "def tokenisation(text):\n",
@@ -695,8 +729,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddb85a1b",
+   "metadata": {},
+   "source": [
+    "### Suppression des mots d'arrêt\n",
+    "Les mots d'arrêt sont des mots qui sont tellement communs qu'il est inutile de l'indexer et peuvent engendrer des effets négatifs sur les performances du modèle.\n",
+    "\n",
+    "Pour les supprimes il faut d'abord le faire en fonction du problème que vous résolvez.\n",
+    "\n",
+    "\n",
+    "Vous pouvez les retirer en utilisant la librairie NLTK qui fournit une liste de mots d'arrêt pour les l'anglais\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "110a2ec2",
    "metadata": {},
    "outputs": [
@@ -907,29 +955,18 @@
        "9  [had your mobile 11 months or more u r entitled to update to the latest colour mobiles , ith camera for free call the mobile update co free on 08002986030]    "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Suppression des mots d'arret\n",
-    "\"\"\"\n",
-    "Pourquoi supprimer les mots d'arret:\n",
-    "    On les supprime parce qu'elles n'ont aucune valeur lors de l'analyse\n",
-    "Pour les supprimer il faut d'abord le faire en fonction du probleme qu'on resoud \n",
-    "on peut les retirer on utilisant la librarie NLTK qui fournit une liste de mots d'arret pour la langue anglaise\n",
-    "ou si ca correspond pas a notre probleme on peut creer notre propres liste\n",
-    "\"\"\"\n",
-    "\n",
-    "#import NLTK\n",
     "import nltk\n",
-    "#telecharger le module stopwords de nltk\n",
     "nltk.download('stopwords')\n",
-    "\n",
     "stopwords = nltk.corpus.stopwords.words(\"english\")\n",
     "\n",
-    "#Une fonction permettant de supprimer les stop words\n",
+    "#Cette fonction permet de supprimer les stop words\n",
     "def remove_stopwords(text, stopwords = stopwords):\n",
     "    output = [i for i in text if i not in stopwords]\n",
     "    return output\n",
@@ -939,8 +976,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "864623da",
+   "metadata": {},
+   "source": [
+    "### La normalisation \n",
+    "Comme technique de normalisation de texte il y a le **stemming** où les mots sont dérivés ou diminués à leur forme \n",
+    "racine / base. ‎‎Par exemple‎‎, des mots comme « programmeur », « programmation », \n",
+    "« programme » seront dérivés de « programme ».‎\n",
+    "\n",
+    "Ensuite il y a la **Lemmatisation** qui tire le mot mais s’assure qu’il ne perd pas son sens.\n",
+    "\n",
+    "**Lemmatization** a un dictionnaire prédéfini qui stocke le contexte des mots et vérifie le mot dans le dictionnaire \n",
+    "tout en diminuant.‎\n",
+    "\n",
+    "Dans notre cas nous allons utiliser la technique de **lemmatisation** Pour normaliser les données, pour cela il faudra installer wordnet.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "433f962e",
    "metadata": {},
    "outputs": [
@@ -948,6 +1003,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[nltk_data] Downloading package omw-1.4 to\n",
+      "[nltk_data]     C:\\Users\\MOHAM\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     C:\\Users\\MOHAM\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
@@ -1174,27 +1232,17 @@
        "9  [had your mobile 11 months or more u r entitled to update to the latest colour mobiles , ith camera for free call the mobile update co free on 08002986030]    "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#la normalisation d'un texte\n",
-    "\"\"\"\n",
-    "Comme technique de normalisation de texte on a le stemming où les mots sont dérivés ou diminués à leur forme \n",
-    "racine / base. ‎‎Par exemple‎‎, des mots comme « programmeur », « programmation », \n",
-    "« programme » seront dérivés de « programme ».‎\n",
-    "\n",
-    "Ensuite on a la Lemmatisation qui tire le mot mais s’assure qu’il ne perd pas son sens. \n",
-    "Lemmatization a un dictionnaire prédéfini qui stocke le contexte des mots et vérifie le mot dans le dictionnaire \n",
-    "tout en diminuant.‎\n",
-    "\"\"\" \n",
-    "\n",
-    "#nous allons utiliser la technique de lemmatisation pour normaliser nos textes\n",
-    "#import WordNetLemmatizer\n",
+    "#la normalisation \n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "#il faudra installer wordnet pour effectuer la lemmatisation\n",
+    "\n",
+    "#installation de  wordnet\n",
+    "nltk.download('omw-1.4')\n",
     "nltk.download('wordnet')\n",
     "\n",
     "wordLematize = WordNetLemmatizer()\n",
@@ -1208,8 +1256,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34fa9188",
+   "metadata": {},
+   "source": [
+    "### Supprimer des liens\n",
+    "Pour supprimer les liens des SMS vous allez utiliser la librairie re "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "43373a45",
    "metadata": {},
    "outputs": [
@@ -1457,20 +1514,19 @@
        "9  Had your mobile 11 months or more? U R entitled to Update to the latest colour mobiles with camera for Free! Call The Mobile Update Co FREE on 08002986030        "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Supprimer les hyperlinks su texte, pour se faire en utilise la librabrie re\n",
     "df['no_link']=df['v2'].apply(lambda x:re.sub('http[s]?://\\S+',' ', x))\n",
     "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "43530ff6",
    "metadata": {
     "scrolled": false
@@ -1743,7 +1799,7 @@
        "9  had your mobile 11 months or more u r entitled to update to the latest colour mobiles with camera for free call the mobile update co free on 08002986030    "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,12 +1815,14 @@
    "id": "85f5fa67",
    "metadata": {},
    "source": [
-    "# Vectorisation du texte"
+    "# Vectorisation du texte\n",
+    "pour transformer les données textuelle en vecteurs vous pouvez utiliser l'architecture **BAG OF WORDS** avec la fonction **CountVectorizer** de\n",
+    "sklearn pour ensuite le passe dans fonction **tfidfTransformer** de la méthode de terme fréquent avec encore sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7cab6c10",
    "metadata": {},
    "outputs": [
@@ -1774,27 +1832,30 @@
        "('il y a plus de ', 8657, ' mots')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#pour transformer notre textes en vecteurs on va utiliser l'architecture \"BAG OF WORDS\" avec la fonction CountVectorizer de\n",
-    "# sklearn pour en suite le passer dans fonction \"tfidfTransformer\" de la methode de terme frequent avec encore sklearn\n",
-    "\n",
-    "#import CountVectorizer\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "\n",
     "vectorizerCount = CountVectorizer().fit(df[\"no_link\"])\n",
     "\n",
-    "#on verifier le nombre de mots contenus dans notre texte\n",
+    "#Verification du nombre de carateristique dans un SMS\n",
     "\"il y a plus de \", len(vectorizerCount.vocabulary_), \" mots\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f701a29",
+   "metadata": {},
+   "source": [
+    "Test du transformater"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "6c39131a",
    "metadata": {},
    "outputs": [
@@ -1804,20 +1865,19 @@
        "'Go until jurong point, crazy.. Available only in bugis n great world la e buffet... Cine there got amore wat...'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#nous allons tester notre notre transformateur\n",
     "select_sentences = df[\"no_link\"][0]\n",
     "select_sentences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0519ebc2",
    "metadata": {
     "scrolled": true
@@ -1855,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f9370b63",
    "metadata": {},
    "outputs": [
@@ -1865,7 +1925,7 @@
        "(5572, 8657)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1876,8 +1936,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9729da97",
+   "metadata": {},
+   "source": [
+    "Vous allez ensuite utilise vos donnees transformees avec CountVectorizer (bag of word) sur le transformateur de **Term Frequency (TfidfTransformer)**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "962b68d5",
    "metadata": {},
    "outputs": [
@@ -1890,10 +1958,6 @@
     }
    ],
    "source": [
-    "#Nous allons maintenant transformer nos donnees transformer avec CountVectorizer (bag of word), avec le transformateur de \n",
-    "# Term Frequency (TfidfTransformer)\n",
-    "\n",
-    "#import TfidfTransformer\n",
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
     "\n",
     "tf = TfidfTransformer()\n",
@@ -1902,39 +1966,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "b9068957",
+   "cell_type": "markdown",
+   "id": "042451df",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nPour la vectorisation on peut egalement utiliser un model de prediction appeller Word2vec pour effectuer une vectorisation\\nsur notre DataFrame au lieu des 2 dernieres methodes.\\n\\nCE QUI MET FIN A LA VECTORISATION ON PEUT PASSER A LA MODELISATION (CA PAS GRANDES CHOSES A DIRE.).\\n'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "Pour la vectorisation on peut egalement utiliser un model de prediction appeller Word2vec pour effectuer une vectorisation\n",
-    "sur notre DataFrame au lieu des 2 dernieres methodes.\n",
+    "Pour la vectorisation vous pouvez utiliser un modèle prédictif appelé Word2vec pour effectuer une vectorisation sur votre DataFrame au lieu des 2 dernières méthodes.\n",
     "\n",
-    "CE QUI MET FIN A LA VECTORISATION ON PEUT PASSER A LA MODELISATION (CA PAS GRANDES CHOSES A DIRE.).\n",
-    "\"\"\"\n"
+    "**CE QUI MET FIN À LA VECTORISATION**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "01930fc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#on va maintenant enregistrer notre nouveau dataset \n",
+    "#Enregistrement du nouveau dataset \n",
     "df.to_csv('spam/spam_correct.csv')"
    ]
   }
@@ -1955,7 +2003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
